--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,33 @@
 version: '3.8'
-
 services:
   app:
     image: 'jc21/nginx-proxy-manager:latest'
     network_mode: bridge
     restart: unless-stopped
-    volumes:
-      - /home/ubuntu/nginx-proxy-manager/data:/data
-      - /home/ubuntu/nginx-proxy-manager/letsencrypt:/etc/letsencryptypt
     ports:
       # These ports are in format <host-port>:<container-port>
       - '80:80' # Public HTTP Port
       - '443:443' # Public HTTPS Port
       - '81:81' # Admin Web Port
-    deploy:
-      replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
-      resources:
-        limits:
-          cpus: "0.1"
-          memory: 256M
+      # Add any other Stream port you want to expose
+      # - '21:21' # FTP
+    environment:
+      # Mysql/Maria connection parameters:
+      DB_MYSQL_HOST: "db"
+      DB_MYSQL_PORT: 3306
+      # Uncomment this if IPv6 is not enabled on your host
+      # DISABLE_IPV6: 'true'
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
+    depends_on:
+      - db
 
+  db:
+    image: 'jc21/mariadb-aria:latest'
+    network_mode: bridge
+    restart: unless-stopped
+    environment:
+      MYSQL_DATABASE: 'npm'
+    volumes:
+      - ./mysql:/var/lib/mysql
