--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,4 +36,4 @@ services:
    logging:
      driver: "gelf"
      options:
-       gelf-address: "udp://log.labsecurity.dev.br"
+       gelf-address: "udp://log.labsecurity.dev.br:12201"
